<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".Gestion_Ruta">


    <EditText
        android:id="@+id/txt_contenido"
        android:layout_width="328dp"
        android:layout_height="204dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/style_edit_text"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <Button
        android:id="@+id/button2"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_btn"
        android:onClick="Consultar"

        android:text="@string/boton_Consultar"
        android:textColor="#2E2A2A"
        android:textSize="16sp"

        app:backgroundTint="#EEB20E"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/txt_contenido" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/style_edit_text"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_btn"
        android:onClick="Guardar"

        android:text="@string/boton_Guardar"
        android:textColor="#2E2A2A"
        android:textSize="16sp"

        app:backgroundTint="#EEB20E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contenido" />

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="12dp"
        android:text="@string/menu_gestion_ruta"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:text=""
        android:textColor="#000000"
        android:textStyle="bold"

        />

</androidx.constraintlayout.widget.ConstraintLayout>