<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundprincial"
    tools:context=".Principal"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="358dp">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="366dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"

        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="irchat"
            app:srcCompat="@drawable/like"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="ircodifo"
            app:srcCompat="@drawable/security"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="irgestionruta"
            app:srcCompat="@drawable/folder"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="364dp"
        android:layout_height="80dp"
        android:layout_marginTop="328dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="irruta"
            app:srcCompat="@drawable/location"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="irnotificacion"
            app:srcCompat="@drawable/notification"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="irchat"
            app:srcCompat="@drawable/bubblechat"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="364dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/tv_segumiento_ruta"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_notificacion"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_chat"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_califica"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_codigo_seguridad"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_gestion_ruta"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>