<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="409dp"
        android:layout_height="39dp"
        android:background="#037A98"
        android:gravity="center_horizontal"
        android:text="@string/notification_title"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="373dp"
        android:layout_height="61dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@color/fondo_notificacion"
        android:text="@string/notificacion_001"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="31dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:src="@mipmap/logo_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="31dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@mipmap/logo_school"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="23dp"
        android:layout_below="@id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:background="@color/fondo_notificacion"
        android:text="@string/saludo_padre"
        android:textAlignment="center"
        android:textIsSelectable="true"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="130dp"
        android:layout_height="23dp"
        android:layout_below="@id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@color/fondo_notificacion"
        android:text="@string/saludo_padre"
        android:textAlignment="center"
        android:textIsSelectable="true"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="374dp"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@color/fondo_notificacion"
        android:text="@string/notificacion_002"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="135dp"
        android:layout_height="107dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/logo2" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="irprincipal"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:layout_editor_absoluteY="1dp" />

    <!--</LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>