<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="396dp"
        android:layout_height="323dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="187dp"
            android:layout_height="139dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="291dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_edit_text"
            android:drawableLeft="@drawable/iconousuario"
            android:hint="Email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="291dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/style_edit_text"
            android:drawableLeft="@drawable/iconocopass"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="154dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.488">

        <Button
            android:id="@+id/button"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/style_btn"
            android:drawableLeft="@drawable/iconogoogle"
            android:onClick="irprincipal"
            android:text="@string/btn_google"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#272525"
            app:backgroundTint="#f5f6fa"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_btn"
            android:drawableLeft="@drawable/iconofacebook"
            android:text="@string/btn_facebook"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:backgroundTint="#273c75"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="356dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="55dp"
            android:layout_height="46dp"
            android:layout_gravity="left"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/style_btn"
            android:onClick="logInPressesd"
            android:padding="5dp"
            android:shadowColor="#4C4949"
            android:text="@string/btn_login"
            android:textColor="#2C2A2A"
            app:backgroundTint="#EEB20E"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/registroS"
            android:layout_width="55dp"
            android:layout_height="46dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/style_btn"
            android:onClick="registroS"
            android:padding="5dp"
            android:shadowColor="#2C2929"
            android:text="@string/btn_registro"
            android:textColor="#2C2A2A"
            app:backgroundTint="#EEB20E"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>